--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,29 @@
+:root{
+    --background-color: #144E5C;
+}
 html,body{
     margin: 0;
     height: 100%;
     width: 100%;
     background-color: antiquewhite;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+a{
+    text-decoration: none;
+    color: white;
+}
+
+nav{
+    background-color: var(--background-color);
+    display: flex;
+}
+
+nav a{
+
+}
+
+nav a img{
+    height: 35px;
+    width: 35px;
 }
