--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,68 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 :root{
     --background-color: #144E5C;
+    --background-buttons: grey;
+    --text-color-primary: white;
+    --hover-buttons: #ffa600;
+    --text-color-secondary: #49c4ab;
 }
 html,body{
     margin: 0;
     height: 100%;
     width: 100%;
     background-color: antiquewhite;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Open Sans',system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 a{
     text-decoration: none;
-    color: white;
+    color: var(--text-color-primary);
 }
 
 nav{
     background-color: var(--background-color);
     display: flex;
+    height: 60px;
+    align-items: center;
+    position: relative;
 }
 
 nav a{
+    font-weight: bold;
+    display: flex;
+    margin: 0 5% 0 5%;
+    font-size: 20px;
+}
 
+nav a ~ a{
+    font-weight: normal;
+    margin: 0 10px 0 0;
+    font-size: 15px;
 }
 
 nav a img{
     height: 35px;
     width: 35px;
+    margin-left: 10px;
+}
+
+.button-navbar{
+    background-color: var(--background-buttons);
+    font-size: 20px;
+    border-radius: 5px;
+    border: 2px solid var(--text-color-primary);
+    position: absolute;
+    right: 3%;
+}
+
+.button-navbar:hover{
+    border: 2px solid var(--hover-buttons);
+}
+
+.button-navbar i{
+    color: var(--text-color-primary);
+}
+
+.button-navbar i:hover{
+    color: var(--text-color-secondary);
 }
