--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ html,body{
     margin: 0;
     height: 100%;
     width: 100%;
-    background-color: antiquewhite;
+    background-color: rgb(204, 202, 200);
     font-family: 'Open Sans',system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -21,6 +21,8 @@ a{
 
 .active{
     background-color: var(--hover-buttons);
+    padding: 2px 5px;
+    border-radius: 3px;
 }
 
 nav{
@@ -39,9 +41,14 @@ nav a{
 }
 
 nav a ~ a{
-    font-weight: normal;
+    font-weight: 500;
     margin: 0 10px 0 0;
     font-size: 15px;
+    box-sizing: content-box;
+}
+
+nav a ~ a:hover{
+    color: var(--text-color-secondary);
 }
 
 nav a img{
@@ -51,6 +58,7 @@ nav a img{
 }
 
 .button-navbar{
+    /* visibility: hidden; */
     background-color: var(--background-buttons);
     font-size: 20px;
     border-radius: 5px;
