--- a/css/style.css
+++ b/css/style.css
@@ -32,16 +32,18 @@ a{
 nav{
     background-color: var(--background-color);
     display: flex;
-    height: 60px;
+    height: auto;
     align-items: center;
     position: relative;
+    padding: 15px 0px;
 }
 
-nav a{
+nav a.title-page{
     font-weight: bold;
-    display: flex;
     margin: 0 5% 0 5%;
-    font-size: 20px;
+    font-size: 15px;
+    display: flex;
+    align-items: center;
 }
 
 nav .nav-links a{
@@ -50,6 +52,7 @@ nav .nav-links a{
     font-size: 15px;
     box-sizing: content-box;
     justify-content: center;
+    width: auto;
 }
 
 nav .nav-links a:hover{
@@ -88,3 +91,30 @@ nav .nav-links{
 .button-navbar i:hover{
     color: var(--text-color-secondary);
 }
+
+/* Ajustes para los diferentes tipos de pantalla */
+@media(width < 481px){
+    nav{
+        flex-direction: column;
+    }
+    nav .nav-links{
+        display: none;
+    }
+}
+
+@media(width > 480px) and (width < 560px){
+    nav{
+        flex-direction: column;
+    }
+    nav .nav-links{
+        display: none;
+    }
+}
+
+@media(width > 560px){
+    .button-navbar{
+        display: none;
+    }
+}
+
+/* Fin ajustes para los diferentes tipos de pantalla */
